# AI_FINANCE_ANALYST

./: .env.example  .env.model  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  ai_watch_report.py  analyze_and_report.py  auto_push.sh  historical_live_stream.py  main.py  package-lock.json  pyproject.toml  readme.md  run_commands.sh  tickers.txt
.devcontainer/: devcontainer.json  ensure-uv.sh  post-create.sh  post-start.sh  refresh-repo.sh
.github/workflows/: ci.yml  pre-commit.yml
ai_analysis/: ai_insights_20260315_144656.md  ai_insights_20260315_211257.md  ai_insights_20260315_211357.md  ai_insights_20260319_132928.md
scripts/: check_devcontainer_no_claude_code.sh
