[project]
name = "ai-finance-analyst"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "groq>=1.0.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "openai>=2.18.0",
    "pandas>=3.0.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "yfinance>=1.1.0",
]
